--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,6 @@
     </ul>
   </div>
   <div class="col">
-    <h2>Por Capital</h2>
-    <hr />
+    <router-outlet></router-outlet>
   </div>
 </div>
