--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,1 +1,47 @@
-<p>por-pais works!</p>
+<h2>Por País</h2>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <form (ngSubmit)="buscar()" autocomplete="off" action="">
+      <input
+        type="text"
+        name="termino"
+        class="form-control"
+        [(ngModel)]="termino"
+        placeholder="Buscar país..."
+      />
+    </form>
+  </div>
+</div>
+
+<hr />
+
+<div class="alert alert-danger">
+  No se encontro ningún resultado con el término ABCD
+</div>
+
+<div class="row">
+  <div class="col">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Bandera</th>
+          <th>Nombre</th>
+          <th>Población</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Bandera</td>
+          <td>Perú</td>
+          <td>3000000</td>
+          <td><a href="#">Ver...</a></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
