--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -21,7 +21,7 @@
   No se encontro ningún resultado con el término {{ termino }}
 </div>
 
-<div class="row">
+<div *ngIf="paises.length > 0" class="row">
   <div class="col">
     <table class="table table-hover">
       <thead>
@@ -34,12 +34,14 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>1</td>
-          <td>Bandera</td>
-          <td>Perú</td>
-          <td>3000000</td>
-          <td><a href="#">Ver...</a></td>
+        <tr *ngFor="let pais of paises; let i = index">
+          <td>{{ i + 1 }}</td>
+          <td>
+            <img [src]="pais.flags.png" class="small-flag" alt="" />
+          </td>
+          <td>{{ pais.name.common }}</td>
+          <td>{{ pais.population | number }}</td>
+          <td><a [routerLink]="['/pais', pais.cca2]">Ver...</a></td>
         </tr>
       </tbody>
     </table>
