--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -5,6 +5,7 @@
     class="form-control"
     [(ngModel)]="termino"
     (input)="teclaPresionada()"
-    placeholder="Buscar país..."
+    [placeholder]="placeholder"
+    title="Búsqueda"
   />
 </form>
